<resources>
    <string name="app_name">CalculationTest</string>

    <string name="high_score_message">High Score: %d</string>
    <string name="title_message">Calculation Test</string>
    <string name="title_button_message">ENTER</string>
    <string name="title_image">Title Image</string>

    <string name="current_score">Score: %d</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="equal_symbol">=</string>
    <string name="question_mark">\?</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button_clear">C</string>
    <string name="button_submit">OK</string>
    <string name="answer_correct_message">Correct!Go On!</string>
    <string name="quit_dialog_title">Are you sure to quit?</string>
    <string name="dialog_positive_message">OK</string>
    <string name="dialog_negative_message">Cancel</string>

    <string name="lose_image_message">lose image</string>
    <string name="lose_message">You Lose!</string>
    <string name="lose_score_message">Your Score: %d</string>
    <string name="button_back">BACK</string>

    <string name="win_image_message">win image</string>
    <string name="win_message">You Win!</string>
    <string name="win_score_message">New Score: %d</string>
</resources>